# AssetManager

./: .gitignore  Cargo.toml  Makefile  README.md
src/: cli.rs  main.rs  pack.rs  strip.rs  utils.rs
