[package]
name = "asset_manager"
version = "0.1.0"
authors = ["captainmorgan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sheep = { path = "../sheep/sheep" }
rayon = "1.1.0"
walkdir = "2.2.8"
image = "0.20"
ron = "0.4"
clap = "2.33.0"
